<resources>
    <string name="app_name">Wallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_mobile_number">Mobile Number</string>
    <string name="enter_your_password">password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="ar">AR</string>
    <string name="enter_your_user_name">User Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">password</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="please_verify_your_identity">Please verify your identity</string>
    <string name="national_id">National ID</string>
    <string name="national_id_photo">National ID Photo</string>
    <string name="re_upload">Re-upload</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="explore_the_app">Explore the app</string>
    <string name="your_application_is_submitted_and_is_under_review">Your application is submitted and is under review</string>
    <string name="no_i_want_to_stay">No, I want to stay</string>
    <string name="yes_i_want_to_log_out">Yes, I want to log out</string>
    <string name="enter_otp_code">Enter otp code</string>
    <string name="how_satisfied_are_you_with_today_s_experience">How satisfied are you with today\'s experience?</string>
    <string name="not_satisfied">Not satisfied</string>
    <string name="neutral">Neutral</string>
    <string name="satisfied">Satisfied</string>
    <string name="select_a_date_range">Select a date range</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="last_90_days">Last 90 days</string>
    <string name="our_app_allows_you_to_easily_store_manage_and_spend_your_money_on_the_go_with_our_secure_platform_you_can_make_transactions_check_your_balance_and_track_your_spending_all_in_one_place_whether_you_re_paying_bills_shopping_online_or_sending_money_to_friends_and_family_our_app_makes_it_easy_and_convenient_to_do_so_plus_with_our_various_promotions_and_discounts_you_can_save_even_more_while_using_our_app_thank_you_for_choosing_us_as_your_preferred_e_wallet_solution_if_you_have_any_questions_or_feedback_please_don_t_hesitate_to_contact_us_we_re_always_here_to_help">Our app allows you to easily store, manage, and spend your money on the go. With our secure platform, you can make transactions, check your balance, and track your spending all in one place. Whether you\'re paying bills, shopping online, or sending money to friends and family, our app makes it easy and convenient to do so. Plus, with our various promotions and discounts, you can save even more while using our app. Thank you for choosing us as your preferred e-wallet solution. If you have any questions or feedback, please don\'t hesitate to contact us. We\'re always here to help.</string>
    <string name="home_page">Home page</string>
    <string name="menu">Menu</string>
    <string name="name_on_card">Name on card</string>
    <string name="amount">Amount</string>
    <string name="reason_for_the_transfer">Reason for the transfer</string>
    <string name="bank_card_number">Bank card number</string>
    <string name="card_expiry_date">Card expiry date</string>
    <string name="transfer_now">Transfer Now</string>
    <string name="choose_deposit_method">Choose Deposit method</string>
    <string name="bank_card">Bank Card</string>
    <string name="_120_0_yer">From Teller</string>
    <string name="continueq">Continue</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="confirm">Confirm</string>
    <string name="hide_balance">Hide Balance</string>
    <string name="current_balance">Current Balance</string>
    <string name="_100_yer">100 YER</string>
    <string name="our_services">Our Services</string>
    <string name="deposit">Deposit</string>
    <string name="money_transfer">Money Transfer</string>
    <string name="payments">Payments</string>
    <string name="withdraw">Withdraw</string>
    <string name="transaction">Transaction</string>
    <string name="see_all">See all</string>
    <string name="transaction_converted_200_000_yer_for_the_number_01002330230_service_fee_30_000_yer">Transaction Converted 200,000 YER for the number 01002330230 service fee 30.000 YER</string>
    <string name="withdrawal_100_000_yer_service_fee_1000_yer">Withdrawal 100.000 YER, service fee 1000 YER</string>
    <string name="home">Home</string>
    <string name="my_transactions">My Transactions</string>
    <string name="support">Support</string>
    <string name="privacy_security">Privacy , Security</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="my_balance">My Balance</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="enter_amount">Enter amount</string>
    <string name="enter_password">Enter Password</string>
    <string name="transfer_fee_100_yer_where_transferring_to_the_wallet">Transfer fee 100 YER where Transferring to the wallet</string>
    <string name="joined_2_months_ago">Joined 2 months ago</string>
    <string name="user_name">Name</string>
    <string name="edit">Edit</string>
    <string name="_01145204724">01145204724</string>
    <string name="change_password">Change Password</string>
    <string name="save_your_time_and_effort_transfer_money_to_anyone_with_a_click">Save your time and effort, transfer money to anyone with a click</string>
    <string name="show_balance">Show Balance</string>
    <string name="cancel">cancel</string>
    <string name="hi_abdalla_ayash">Hi, Abdalla Ayash</string>
    <string name="easily_pay_your_bills_through_the_wallet">Easily pay your bills through the wallet</string>
    <string name="_15_mar_2023">15 Mar 2023</string>
    <string name="service_charge">SERVICE CHARGE</string>
    <string name="_27_feb">27 Feb</string>
    <string name="_3633_25yer">3633.25YER</string>
    <string name="_30_00yer">30.00YER</string>
    <string name="do_you_really_want_to_log_out">Do you really want to log out?</string>
    <string name="ok">Ok</string>
    <string name="transfer_failed">Transfer Failed</string>
    <string name="your_transfer_has_been_declined">Your transfer has been declined</string>
    <string name="back_to_wallet">Back to wallet</string>
    <string name="payment_done">Payment done!</string>
    <string name="bill_payment_has_been_done_successfully">Bill payment has been done successfully</string>
    <string name="payment_details">Payment details</string>
    <string name="biller">Biller</string>
    <string name="elictricity_company">Elictricity Company</string>
    <string name="yer_132_0">YER 132.0</string>
    <string name="transaction_no">Transaction no</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="deposit_money_in_your_wallet">Deposit money in your wallet</string>
    <string name="hi">Hi ,</string>
    <string name="resend_again">Resend again</string>

    <string name="error">Error!</string>
    <string name="please_check_interent">Please check your network connection and try again</string>
    <string name="close_app">close app</string>
    <string name="try_again">Try Again</string>
    <string name="enter_your_mail">enter your mail</string>
    <string name="recipient_full_name">Recipient Full Name</string>
</resources>