<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeFlow.Presentation.MoneyTransfer.MoneyTransferFragment">


        <androidx.cardview.widget.CardView
            android:id="@+id/my_wallet_card_view"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/qr_image"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/current_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:text="@string/my_balance"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/regular"
                    android:gravity="center"
                    android:text="1200,00 YER"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/mobile_number_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/deposit_money_in_your_wallet"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_wallet_card_view" />

        <EditText
            android:id="@+id/mobile_number_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/text_view_radius"
            android:fontFamily="@font/regular"
            android:hint="@string/mobile_number"
            android:paddingHorizontal="20dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/mobile_number_tv"
            app:layout_constraintTop_toBottomOf="@id/mobile_number_tv" />

        <TextView
            android:id="@+id/amount_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/regular"
            android:text="@string/enter_amount"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mobile_number_et" />

        <EditText
            android:id="@+id/amount_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/text_view_radius"
            android:fontFamily="@font/regular"
            android:hint="@string/amount"
            android:paddingHorizontal="20dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/amount_tv"
            app:layout_constraintTop_toBottomOf="@id/amount_tv" />

        <TextView
            android:id="@+id/password_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/regular"
            android:text="@string/enter_password"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amount_et" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintStart_toStartOf="@id/password_tv"
            app:layout_constraintTop_toBottomOf="@id/password_tv"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_et_Input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/text_view_radius"
                android:fontFamily="@font/regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="20dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/hint_text_color"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/transfer_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/regular"
            android:text="@string/transfer_fee_100_yer_where_transferring_to_the_wallet"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/password_et" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/base_green"
            android:paddingHorizontal="40dp"
            android:paddingVertical="5dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintVertical_bias="0.294"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>