<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_color">

    <EditText
        android:hint="@string/enter_your_password"
        android:id="@+id/passwordET"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/light"
        android:layout_margin="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ShowBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/button_primary_color"
        android:fontFamily="@font/regular"
        android:padding="5dp"
        android:text="@string/show_balance"
        android:textAllCaps="false"
        android:textColor="@color/text_button_color"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordET"

        app:layout_constraintVertical_bias="0.294" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/hint_text_color"
        android:fontFamily="@font/regular"
        android:paddingHorizontal="40dp"
        android:paddingVertical="5dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/text_button_color"
        android:textSize="16sp"

        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ShowBtn"
        app:layout_constraintVertical_bias="0.294" />

</androidx.constraintlayout.widget.ConstraintLayout>