<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/txt_log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/regular"
        android:text="@string/are_you_sure"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/no_thanks_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/button_primary_color"
        android:fontFamily="@font/regular"
        android:paddingHorizontal="40dp"
        android:paddingVertical="5dp"
        android:text="@string/no_i_want_to_stay"
        android:textAllCaps="false"
        android:textColor="@color/text_button_color"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_log_out"

        app:layout_constraintVertical_bias="0.294" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/yes_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/hint_text_color"
        android:fontFamily="@font/regular"
        android:paddingHorizontal="40dp"
        android:paddingVertical="5dp"
        android:text="@string/yes_i_want_to_log_out"
        android:textAllCaps="false"
        android:textColor="@color/text_button_color"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_thanks_btn"
        app:layout_constraintVertical_bias="0.294" />

</androidx.constraintlayout.widget.ConstraintLayout>